renaming all components

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ a:hover {
     color: #f3d22d;
 }
 
-.pages {
+.views {
     color: white;
     text-align: center;
     font-family: 'Roboto', sans-serif;
