--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,127 +1,171 @@
-.profile-dropdown {
-  text-align: center;
-  font-family:'Roboto',sans-serif;
+.profilePage {
+    margin-top: 2%;
+    margin-bottom: 3%;
+    width: 300px;
 }
 
-.menu-trigger-ico{
-  position: absolute;
-  font-size: 35px;
-  top: 20px;
-  right: 20px;
-  overflow: hidden;
-  cursor: pointer;
-  color: white;
+.profile-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 20px;
 }
 
-.menu-trigger-ico:hover{
-  color: #f3d22d;
+.user-logo-wrapper {
+    margin-top: 5%;
+    width: 100%;
+    border-radius: 20px;
 }
 
-.dropdown-menu::before{
-  content: '';
-  position: absolute;
-  top: -5px;
-  right: 20px;
-  height: 20px;
-  width: 20px;
-  background: #fff;
-  transform: rotate(45deg);
+.user-logo {
+    font-size: 80px;
+    color: white;
+    position: relative;
+    overflow: visible;
+    top: 0%;
+    left: 0%;
+    margin-bottom: 10%;
 }
 
-.dropdown-menu{
-  position: absolute;
-  top: 70px;
-  right: 10px;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 10px 20px;
-  width: 200px;
+.user-info {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5%;
+    margin-bottom: 10%;
+    width: 80%;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.519);
+    border-top: 2px solid rgba(255, 255, 255, 0.519);
+    /* border-left: 2px solid rgba(255, 255, 255, 0.719); */
+    /* border-right: 2px solid rgba(255, 255, 255, 0.719); */
+    border-radius: 8px;
 }
 
-.dropdown-menu ul li{
-  padding: 10px  0;
-  border-top: 1px solid rgba(0, 0, 0, 0.05);
+.user-info-category {
+    font-size: 16px;
 }
 
-.dropdown-menu ul li:hover a{
-  color: unset;
-  opacity: 0.5;
-  cursor: pointer;
+.user-info-email,
+.user-info-name,
+.user-info-phone,
+.user-info-reservation {
+    color: white;
+    font-size: 14px;
 }
 
-.dropdown-menu.active{
-  opacity: 1;
-  visibility: visible;
-  transform: translateY(0);
-  transition: 900ms ease;
-  z-index: 200;
+.reservation-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
-.dropdown-menu.inactive{
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-20px);
-  transition: 500ms ease;
-  z-index: 200;
+.span-reservation {
+    font-size: 14px;
 }
 
-.dropdownItem-info{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.user-info-reservation {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin-bottom: 10%;
+    gap: 20px;
+    width: 80%;
+    border-radius: 8px;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.519);
+    border-top: 2px solid rgba(255, 255, 255, 0.519);
 }
 
-.dropdownItem{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 10px auto;
+.span-user-info-reservation {
+    border-bottom: 2px solid rgba(255, 255, 255, 0.519);
+    border-top: 2px solid rgba(255, 255, 255, 0.519);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin-bottom: 10%;
+    gap: 20px;
+    width: 80%;
+    border-radius: 8px;
 }
 
-.dropdownItem-name{
-  width: 100%;
-  text-align: center;
-  font-size: 18px;
-  padding: 10px 0;
-  color: black;
-  line-height: 1.2rem;
+.user-info-reservation-p{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 5%;
+    margin-bottom: 10%;
+    gap: 20px;
+    width: 80%;
+    border-radius: 8px;
 }
 
-.dropdownItem-email{
-  font-size: 14px;
-  color: rgb(85, 85, 85)d5d;
-  font-weight: 400;
+@media screen and (max-width: 480px) and (min-width: 360px) {
+   .profilePage{
+    margin-top: 7%;
+   }
 }
 
-.dropdownItem-ico{
-  color: black;
-  font-size: 20px;
-  margin-right: 10px;
-  opacity: 0.7;
-  transition: 500ms;
+@media screen and (max-width: 600px) and (min-width: 481px) {
+    .profilePage{
+        margin-top: 7%;
+       }
 }
 
-.dropdownItem-link{
-  max-width: 100px;
-  margin-left: 10px;
-  transition: 500ms;
-  cursor: pointer;
-  color: black;
+@media screen and (max-width: 768px) and (min-width: 601px) {
+    .profilePage{
+        margin-top: 5%;
+       }
 }
 
-.fieldset{
-  outline: none;
-  border: none;
+@media screen and (max-width: 900px) and (min-width: 769px) {
+    .profilePage{
+        margin-top: 5%;
+       }
 }
 
+@media screen and (max-width: 1024px) and (min-width: 901px) {
+    .profilePage{
+        margin-top: 4%;
+       }
+}
 
+@media screen and (max-width: 1200px) and (min-width: 1025px) {
+    .profilePage{
+        margin-top: 4%;
+       }
+}
 
+@media screen and (max-width: 1440px) and (min-width: 1201px) {
+    .profilePage{
+        margin-top: 4%;
+       }
+}
 
+@media screen and (max-width: 1600px) and (min-width: 1441px) {
+    .profilePage{
+        margin-top: 3%;
+       }
+}
 
+@media screen and (max-width: 1920px) and (min-width: 1601px) {
+    .profilePage{
+        margin-top: 2%;
+       }
+}
 
-
-
-
-
-
+@media screen and (max-width: 2560px) and (min-width: 1921px) {
+    .profilePage{
+        margin-top: 2%;
+       }
+}
